# globus-transfer

./: .gitignore  ARCHICTECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/globus_transfer/: __init__.py  __main__.py  cli.py  config.py  logging.py  util.py
tests/: test_cli.py
